--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGODB_URI= mongodb://localhost:27017/mydatabase
-JWT_SECRET= your_jwt_secret
+MONGODB_URI= mongodb+srv://hackintown:mkDir123%40%23Xm@social-media-cluster.zpynntr.mongodb.net/auth
+JWT_SECRET= myjwtsecret
 PORT = 5000
