--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 MONGODB_URI= mongodb+srv://hackintown:mkDir123%40%23Xm@social-media-cluster.zpynntr.mongodb.net/auth
 JWT_SECRET= myjwtsecret
 PORT = 5000
+CLIENT_URL = https://hackintown-v2-0-static.onrender.com
