--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     startCommand: cd server && npm start
     envVars:
       - key: MONGODB_URI
-        value: mongodb+srv://hackintown:mkDir123%40%23Xm@social-media-cluster.zpynntr.mongodb.net/auth
+        value: mongodb+srv://hackintown:mkDir123%40%23Xm@social-media-cluster.zpynntr.mongodb.net/
       - key: JWT_SECRET
         value: mysecretkey
       - key: CLIENT_URL
