--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URI= mongodb+srv://hackintown:mkDir123%40%23Xm@social-media-cluster.zpynntr.mongodb.net/auth
+MONGODB_URI= mongodb+srv://hackintown:mkDir123%40%23Xm@social-media-cluster.zpynntr.mongodb.net/
 JWT_SECRET= myjwtsecret
 PORT = 5000
 CLIENT_URL = https://hackintown-v2-0-static.onrender.com
