--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,1 +1,92 @@
-node_modules
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Build directories
+dist/
+build/
+public/build/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Editor directories and files
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# OS generated files
+.DS_Store
+Thumbs.db
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# Debug log files
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+
+# IDE-specific files
+*.iml
+.idea/
+
+# Compiled source
+*.out
+*.class
+
+# Various
+*.swo
+*.swp
+*.bak
+*.orig
+*.rej
+
+# Static generated files
+/static/
+out/
+*.html
+
+# Misc
+.DS_Store
+*.pem
+
+# React Native
+.expo/
+.expo-shared/
+
+# Custom pattern for sensitive files
+config/local.js
