--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "mongosh": "^2.2.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "description": "",
   "devDependencies": {
