--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,7 @@
 MONGODB_URI= mongodb+srv://hackintown:mkDir123%40%23Xm@social-media-cluster.zpynntr.mongodb.net/
 JWT_SECRET= myjwtsecret
 PORT = 5000
-CLIENT_URL = https://hackintown-v2-0-static.onrender.com
+CLIENT_URL = http://localhost:5173
+GOOGLE_CLIENT_ID = 416930312439-urcm6kqe7hjk6ouh9a6hdohop8b40gmb.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET = 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
+SESSION_SECRET = mysessionsecret
