--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,5 @@ CLIENT_URL = http://localhost:5173
 GOOGLE_CLIENT_ID = 416930312439-urcm6kqe7hjk6ouh9a6hdohop8b40gmb.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
 SESSION_SECRET = mysessionsecret
+RAZORPAY_KEY_ID= rzp_live_OjOeKHPcFGiR42
+RAZORPAY_KEY_SECRET = fQWWmGrvK0UnCNsq17701eQ0
