--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,5 @@ GOOGLE_CLIENT_SECRET = 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
 SESSION_SECRET = mysessionsecret
 RAZORPAY_KEY_ID= rzp_live_OjOeKHPcFGiR42
 RAZORPAY_KEY_SECRET = fQWWmGrvK0UnCNsq17701eQ0
+EMAIL_USER= manojkumarcse432@gmail.com
+EMAIL_PASS= syik vrez qgmu ypfu
