--- a/server/.env
+++ b/server/.env
@@ -8,4 +8,4 @@ SESSION_SECRET = mysessionsecret
 RAZORPAY_KEY_ID= rzp_live_OjOeKHPcFGiR42
 RAZORPAY_KEY_SECRET = fQWWmGrvK0UnCNsq17701eQ0
 EMAIL_USER= manojkumarcse432@gmail.com
-EMAIL_PASS= syik vrez qgmu ypfu
+EMAIL_PASS= aftk vmtt aele szgl
